dev-versus/backend/versus-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  selector:
    matchLabels:
      io.kompose.service: backend
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.service: backend
    spec:
      containers:
      - image: ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/versus-backend:IMAGEVERSION
        name: backend
        imagePullPolicy: Always 
        ports:
        - containerPort: 8080
        resources: {}
status: {}
