dev-versus/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: NAMESPACE
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8080
  selector:
    io.kompose.service: backend
status:
  loadBalancer: {}
