dev-versus/backend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myserviceb
  namespace: NAMESPACE
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: versus-dev-21d-ubuntu.exchangeweb.net
    http:
      paths:
      - path: /api
        backend:
          serviceName: backend 
          servicePort: 8000
